# SmartCalculator

./: README.md  examples.txt
src/: Makefile  doc.txt  main.c  test.out
src/build-calc-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
src/build-calc-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-e3668f4483bb7c03e44a.json  cmakeFiles-v1-8d05994f14eef46b398c.json  codemodel-v2-11a7858fee74bc0c1c58.json  target-calc-Debug-2585b7a4a87272cc83ab.json
src/build-calc-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
src/build-calc-Desktop_x86_darwin_generic_mach_o_64bit-Debug/calc.app/Contents/: Info.plist
src/build-calc-Desktop_x86_darwin_generic_mach_o_64bit-Debug/calc.app/Contents/MacOS/: calc
src/build-calc-Desktop_x86_darwin_generic_mach_o_64bit-Debug/calc_autogen/EWIEGA46WW/: moc_calculator.cpp  moc_calculator.cpp.d
src/build-calc-Desktop_x86_darwin_generic_mach_o_64bit-Debug/calc_autogen/include/: ui_calculator.h
src/calc/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui  grafic.cpp  grafic.h  grafic.ui  graph.cpp  graph.h  graph.ui  main.cpp
src/calculator/: calculator.cpp  calculator.h  calculator.pro  calculator.ui  graph.cpp  graph.h  graph.ui  qcustomplot.h
src/copyMakefile/: Makefile
src/headers/: polish_notation.h  stack.h
src/lib/: calculate.c  polish_notation.c  stack.c
src/report_obj/: file.txt
src/test/: go_test.c  test.c  tests.h
src/test.out.dSYM/Contents/Resources/DWARF/: test.out
(+13 files in other folders)
